--- a/src/Components/ToDoList/Filtrar/filtrar.css
+++ b/src/Components/ToDoList/Filtrar/filtrar.css
@@ -1,19 +1,23 @@
-
 .buttonFiltrar{
-    padding: 7px 15px;
+    position: absolute;
+    width: 100%;
+    padding: 7px 0;
     background-color: #ffffff;
     border-radius: 3px;
     cursor: pointer;
     border: 2px solid #717171;
+    top: 0;
 }
 
 .abaFiltrar{
     background-color: white;
-    padding: 7px 15px;
     margin-top: 2px;
     border-radius: 3px;
     display: grid;
     border: 2px solid #717171;
+    position: absolute;
+    width: 100%;
+    top: 40px;
 }
 
 .abaFiltrar p{
@@ -22,10 +26,11 @@
 }
 
 .filtrarDiv{
-    position: absolute;
-    right: 5%;
-    top: 20px;
+    justify-self: flex-end;
+    margin-right: 4%;
     color: #000000;
     text-align: center;
     width: 110px;
+    position: relative;
+    margin-top: 15px;
 }
